# TwinRover

./: .bash_aliases  .gitignore  LICENSE  README.md  object_fusion_node.py  relevantCommands.txt  slam_params.yaml  test.py
docs/: CNAME  index.html
frontier_explorer/: package.xml  setup.py
frontier_explorer/frontier_explorer/: frontier_explorer.py
src/: odom_tf_broadcaster.py
src/frontier_explorer/: package.xml  setup.py
src/frontier_explorer/config/: exploration_hardened.yaml
src/mpu6050_node/: package.xml  setup.cfg  setup.py
src/mpu6050_node/mpu6050_node/: imu_node.py
src/twinrover_bringup/: package.xml  setup.cfg  setup.py
src/twinrover_description/: CMakeLists.txt  package.xml
src/twinrover_description/config/: ekf.yaml  ros2_control.yaml  slam_toolbox_params.yaml
src/twinrover_description/launch/: robot_state_publisher.launch.py
src/twinrover_description/scripts/: stall_guard.py  twist_to_stamped.py
src/twinrover_description/urdf/: my_robot.urdf  myrobot_real.urdf
src/twinrover_exploration/: package.xml  setup.cfg  setup.py
src/twinrover_exploration/config/: exploration.yaml
src/twinrover_exploration/launch/: explorer_nodes.launch.py
src/twinrover_exploration/resource/: twinrover_exploration
src/twinrover_exploration/twinrover_exploration/: frontier_explorer.py  map_saver_periodic.py  status_monitor.py  teleop_override.py
src/twinrover_gazebo/: CMakeLists.txt  package.xml
src/twinrover_navigation/: CMakeLists.txt  package.xml
src/twinrover_perception/: package.xml  setup.cfg  setup.py
yolov8n_ncnn_model/: metadata.yaml
(+25 files in other folders)
